--- a/app.css
+++ b/app.css
@@ -93,6 +93,10 @@ a {
         font-size: 50px;
     }
 
+    #game-title {
+        font-size: 100px;
+    }
+
     .top-panel a {
         padding-top: 2%;
         padding-bottom: 2%;
@@ -108,6 +112,6 @@ a {
     }
 
     #score {
-        font-size: 50px;
+        font-size: 100px;
     }
 }
